[tool.poetry]
name = "download_data"
version = "0.1.0"
description = ""
authors = ["Konrad <konrad.jimenez@softonitg.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"
autopep8 = "^1.4"
jedi = "^0.13.3"
pylint = "^2.3"
mypy = "^0.701.0"
bpython = "^0.18.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
